--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@ body, html {height: 100%}
     <p class="w3-large w3-center">Stay tuned. This will be my official development website.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+    <script>
+    var dt = new Date();
+    document.getElementById('date-time').innerHTML=dt;
+    </script>
+    <p><span id='date-time'></span>.</p>
   </div>
 </div>
 
