--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {height: 100%}
   background-size: cover;
 }
 </style>
-<body>
+<body onload=display_ct();>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
@@ -27,11 +27,19 @@ body, html {height: 100%}
     <p class="w3-large w3-center">Stay tuned. This will be my official development website.</p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    <script>
-    var dt = new Date();
-    document.getElementById('date-time').innerHTML=dt;
+    <script type="text/javascript"> <!-- time function starts here -->
+    function display_c(){
+    var refresh=1000; // Refresh rate in milli seconds
+    mytime=setTimeout('display_ct()',refresh)
+    }
+
+    function display_ct() {
+    var x = new Date()
+    document.getElementById('ct').innerHTML = x;
+    display_c();
+     }
     </script>
-    <p><span id='date-time'></span>.</p>
+    <span id='ct' ></span>
   </div>
 </div>
 
