--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, html {height: 100%}
     display_c();
      }
     </script>
-    <span id='ct' ></span>
+    <p><span id='ct' ></span></p>
   </div>
 </div>
 
