--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center">Stay tuned. This will be my official development website.</p>
+    <a href=https://github.com/DontEatThemCookies/HQ9 class="w3-large w3-center">My main GitHub project right now</a>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     <script type="text/javascript"> <!-- time function starts here -->
