--- a/index.html
+++ b/index.html
@@ -1,48 +1,10 @@
 <!DOCTYPE html>
-<html>
-<title>David Costell</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('/images/backgroundimage.jpeg');
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
-<body onload=display_ct();>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    David Costell
-  </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Stay tuned. This will be my official development website.</p>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    <script type="text/javascript"> <!-- time function starts here -->
-    function display_c(){
-    var refresh=1000; // Refresh rate in milli seconds
-    mytime=setTimeout('display_ct()',refresh)
-    }
-
-    function display_ct() {
-    var x = new Date()
-    document.getElementById('ct').innerHTML = x;
-    display_c();
-     }
-    </script>
-    <p><span id='ct' ></span></p>
-  </div>
-</div>
-
-</body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en-US">
+  <head>
+    <title>DontEatThemCookies</title>
+  </head>
+  <body>
+    <p>testing</p>
+  </body>
 </html>
-
